refactoring to remove errors